--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "resium": "^1.19.2"
   },
